tests/snapshots/run_wpt_conformance__coreml_reshape__flatten__float16_4D_to_2D_exclusive_4th_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (flatten) float16 4D to 2D exclusive 4th dimension",
    "coreml",
    "PASS",
)
