tests/snapshots/run_wpt_conformance__coreml_reshape__flatten__float32_4D_to_2D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (flatten) float32 4D to 2D",
    "coreml",
    "PASS",
)
